* Fixed Bug in ColorView that happends if the choosed palette is too small * Added / improved ColorPalettes

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -542,8 +542,12 @@ button.tiny, .button.tiny {
 
         .help-right-picture {
 
+          overflow: hidden;
+
           img{
             margin: 0px;
+            width: 257px;
+            height: 158px;
           }
         }
 
